Overlap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/*
+ * Pablo Herrero's portfolio | Made with love by Pablo Herrero | pabloherrero.me
+ * Copyright 2020 Pablo Herrero | MIT License
+ */
+
 /* Fonts */
 @font-face {
     font-family: 'fira_coderegular';
@@ -105,7 +110,7 @@ body::-webkit-scrollbar {
 /* Header */
 #header {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #header .container {
@@ -167,7 +172,7 @@ body::-webkit-scrollbar {
 /* About */
 #about {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #about .container {
@@ -222,7 +227,7 @@ body::-webkit-scrollbar {
 /* Works */
 #works {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #works .container {
@@ -287,6 +292,15 @@ body::-webkit-scrollbar {
     outline: none;
 }
 
+#works a:hover {
+    color: #bd93f9;
+}
+
+#works a:active {
+    color: #50fa7b;
+    outline: none;
+}
+
 @media (min-width: 992px) {
     #works h2 {
         text-align: center;
@@ -312,7 +326,7 @@ body::-webkit-scrollbar {
 /* Contact */
 #contact {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #contact .container {
